--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.defer-datasource-initialization=true
 spring.messages.encoding=UTF-8
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+
+spring.mail.host=smtp.mail.ru
+spring.mail.port=587
+spring.mail.username=ilyant2222@mail.ru
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
